--- a/po/ko.po
+++ b/po/ko.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.1.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-12-30 07:14-0600\n"
-"PO-Revision-Date: 2003-08-24 03:44+0900\n"
+"POT-Creation-Date: 2004-01-10 00:08+0900\n"
+"PO-Revision-Date: 2004-01-10 00:46+0900\n"
 "Last-Translator: Young-Ho, Cha <ganadist@mizi.com>\n"
 "Language-Team: GTP Korean <gnome-kr-translation@gnome.or.kr>\n"
 "MIME-Version: 1.0\n"
@@ -15,100 +15,88 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "응용프로그램"
+msgstr "애플릿"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "응용프로그램"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "그놈 - 바탕화면"
+msgstr "데스크탑"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "개발"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "개발"
+msgstr "개발 환경"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "개발"
+msgstr "개발 도구"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Editors"
-msgstr "/편집(_E)"
+msgstr "편집기"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "응용프로그램"
+msgstr "교육용 프로그램"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "게임 및 오락"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "일반"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "도움말 목록"
+msgstr "도움말 차례"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "응용프로그램"
+msgstr "인터넷 프로그램"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "커널 루틴"
+msgstr "커널"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "응용프로그램"
+msgstr "멀티미디어 프로그램"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "사무 업무용 프로그램"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "응용프로그램"
+msgstr "과학 프로그램"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "보안"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "시스템 호출"
+msgstr "시스템"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "유틸리티"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "응용프로그램"
+msgstr "X 프로그램"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "대소문자 구별(_A)"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "찾기"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "찾기(_F): "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +124,7 @@ msgstr "이전(_P)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "끝까지 가면 처음부터(_W)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -146,31 +134,25 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp 팩토리"
 
-#: src/yelp-db-pager.c:241 src/yelp-window.c:758
-#, fuzzy, c-format
-msgid "The document '%s' could not be opened"
-msgstr "문서 '%s'(이)가 없습니다"
-
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:426
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "yelp:document에 href 속성이 없습니다"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:441
 msgid "Out of memory"
-msgstr ""
+msgstr "메모리가 부족합니다"
 
-#: src/yelp-db-pager.c:602
+#: src/yelp-db-pager.c:618
 msgid "Titlepage"
-msgstr ""
+msgstr "제목 페이지"
 
-#: src/yelp-db-pager.c:604
-#, fuzzy
+#: src/yelp-db-pager.c:620 stylesheets/l10n.xml.in.h:27
 msgid "Contents"
-msgstr "도움말 목록"
+msgstr "차례"
 
-#: src/yelp-db-pager.c:622
+#: src/yelp-db-pager.c:638 stylesheets/l10n.xml.in.h:61
 msgid "Unknown"
-msgstr ""
+msgstr "알 수 없음"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -247,166 +229,378 @@ msgid "System Administration"
 msgstr "시스템 관리"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "문서"
+msgstr "문서 URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "처리할 문서의 URI"
 
-#: src/yelp-toc-pager.c:260
+#: src/yelp-toc-pager.c:264
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: 쉬기 회수가 음수입니다."
 
-#: src/yelp-toc-pager.c:628 src/yelp-toc-pager.c:640
-#, fuzzy
-msgid "The table of contents could not be read."
-msgstr "문서 '%s'(이)가 없습니다"
-
-#: src/yelp-toc-pager.c:841
+#: src/yelp-toc-pager.c:876
 msgid "Categories"
 msgstr "분류"
 
-#: src/yelp-toc-pager.c:862
+#: src/yelp-toc-pager.c:890
 msgid "Documents"
 msgstr "문서"
 
-#: src/yelp-window.c:223
+#: src/yelp-window.c:228
 msgid "/_File"
 msgstr "/파일(_F)"
 
-#: src/yelp-window.c:224
+#: src/yelp-window.c:229
 msgid "/File/_New window"
 msgstr "/파일/새 창(_N)"
 
-#: src/yelp-window.c:227
+#: src/yelp-window.c:232
 msgid "/File/_Close window"
 msgstr "/파일/창 닫기(_C)"
 
-#: src/yelp-window.c:231
+#: src/yelp-window.c:236
 msgid "/_Edit"
 msgstr "/편집(_E)"
 
-#: src/yelp-window.c:232
-#, fuzzy
+#: src/yelp-window.c:237
 msgid "/Edit/_Find..."
-msgstr "/편집/페이지에서 찾기(_F)..."
+msgstr "/편집/찾기(_F)..."
 
-#: src/yelp-window.c:235
-#, fuzzy
+#: src/yelp-window.c:240
 msgid "/Edit/Find Ne_xt"
-msgstr "/편집/다시 찾기(_F)"
+msgstr "/편집/다음 찾기(_X)"
 
-#: src/yelp-window.c:238
-#, fuzzy
+#: src/yelp-window.c:243
 msgid "/Edit/Find Pre_vious"
-msgstr "/편집/다시 찾기(_F)"
+msgstr "/편집/이전 찾기(_V)"
 
-#: src/yelp-window.c:242
+#: src/yelp-window.c:247
 msgid "/_Go"
 msgstr "/이동(_G)"
 
-#: src/yelp-window.c:243
+#: src/yelp-window.c:248
 msgid "/Go/_Back"
 msgstr "/이동/뒤로(_B)"
 
-#: src/yelp-window.c:246
+#: src/yelp-window.c:251
 msgid "/Go/_Forward"
 msgstr "/이동/앞으로(_F)"
 
-#: src/yelp-window.c:249
+#: src/yelp-window.c:254
 msgid "/Go/_Home"
 msgstr "/이동/홈(_H)"
 
-#: src/yelp-window.c:252
-#, fuzzy
+#: src/yelp-window.c:257
 msgid "/Go/"
-msgstr "/이동(_G)"
+msgstr "/이동/"
 
-#: src/yelp-window.c:253
-#, fuzzy
+#: src/yelp-window.c:258
 msgid "/Go/_Previous"
-msgstr "이전(_P)"
+msgstr "/이동/이전(_P)"
 
-#: src/yelp-window.c:256
-#, fuzzy
+#: src/yelp-window.c:261
 msgid "/Go/_Next"
-msgstr "/가기/색인(_I)"
+msgstr "/이동/다음(_N)"
 
-#: src/yelp-window.c:259
-#, fuzzy
+#: src/yelp-window.c:264
 msgid "/Go/_Contents"
-msgstr "도움말 목록"
+msgstr "/이동/차례(_C)"
 
-#: src/yelp-window.c:263
+#: src/yelp-window.c:268
 msgid "/_Help"
 msgstr "/도움말(_H)"
 
-#: src/yelp-window.c:264
+#: src/yelp-window.c:269
 msgid "/Help/_About"
 msgstr "/도움말/이 프로그램은(_A)"
 
-#: src/yelp-window.c:326
+#: src/yelp-window.c:331
 msgid "Help Browser"
 msgstr "도움말 브라우저"
 
-#: src/yelp-window.c:390
-#, c-format
-msgid "The document '%s' does not exist"
-msgstr "문서 '%s'(이)가 없습니다"
-
-#: src/yelp-window.c:426
-msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-window.c:545
+#: src/yelp-window.c:545 stylesheets/l10n.xml.in.h:53
 msgid "Section"
-msgstr "단락"
+msgstr "절"
 
-#: src/yelp-window.c:598
+#: src/yelp-window.c:602
 msgid "Back"
 msgstr "뒤로"
 
-#: src/yelp-window.c:599
+#: src/yelp-window.c:603
 msgid "Show previous page in history"
 msgstr "방문 기록의 이전 페이지를 봅니다"
 
-#: src/yelp-window.c:609
+#: src/yelp-window.c:613
 msgid "Forward"
 msgstr "앞으로"
 
-#: src/yelp-window.c:610
+#: src/yelp-window.c:614
 msgid "Show next page in history"
 msgstr "방문 기록의 다음 페이지를 봅니다"
 
-#: src/yelp-window.c:622
+#: src/yelp-window.c:626
 msgid "Home"
 msgstr "홈"
 
-#: src/yelp-window.c:623
+#: src/yelp-window.c:627
 msgid "Go to home view"
 msgstr "홈 보기로 가기"
 
-#: src/yelp-window.c:791 src/yelp-window.c:822 src/yelp-window.c:1043
-#: src/yelp-window.c:1105
-#, fuzzy, c-format
-msgid "The page '%s' could not be found in this document."
-msgstr "문서 '%s'(이)가 없습니다"
-
-#: src/yelp-window.c:847
+#: src/yelp-window.c:832
 msgid "Loading..."
 msgstr "읽고 있습니다..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1186
+#: src/yelp-window.c:1226
 msgid "translator_credits"
 msgstr "차영호 <ganadist@mizi.com> 2002"
 
-#: src/yelp-window.c:1191
+#: src/yelp-window.c:1231
 msgid "A Help Browser for GNOME"
 msgstr "그놈용 도움말 브라우저"
+
+# 홑 따옴표 열기
+#: stylesheets/l10n.xml.in.h:1
+msgid "&#8216;"
+msgstr "&#8216;"
+
+# 홑 따옴표 닫기
+#: stylesheets/l10n.xml.in.h:2
+msgid "&#8217;"
+msgstr "&#8217;"
+
+# 쌍 따옴표 열기
+#: stylesheets/l10n.xml.in.h:3
+msgid "&#8220;"
+msgstr "&#8220;"
+
+# 쌍 따옴표 닫기
+#: stylesheets/l10n.xml.in.h:4
+msgid "&#8221;"
+msgstr "&#8221;"
+
+#: stylesheets/l10n.xml.in.h:5
+msgid "About This Bibliography"
+msgstr "이 참고목록에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:6
+msgid "About This Book"
+msgstr "이 책에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:7
+msgid "About This Chapter"
+msgstr "이 장에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:8
+msgid "About This Entry"
+msgstr "이 항목에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:9
+msgid "About This Glossary"
+msgstr "이 용어해설에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:10
+msgid "About This Index"
+msgstr "이 찾아보기에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:11
+msgid "About This Part"
+msgstr "이 부에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:12
+msgid "About This Preface"
+msgstr "이 서문에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:13
+msgid "About This Reference"
+msgstr "이 참고문헌에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:14
+msgid "About This Section"
+msgstr "이 절에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:15
+msgid "About This Set"
+msgstr "이 전집에 대한 정보"
+
+#: stylesheets/l10n.xml.in.h:16
+msgid "Affiliation"
+msgstr "추천의 글"
+
+#: stylesheets/l10n.xml.in.h:17
+msgid "Appendix"
+msgstr "부록"
+
+#: stylesheets/l10n.xml.in.h:18
+msgid "Article"
+msgstr "논설"
+
+#: stylesheets/l10n.xml.in.h:19
+msgid "Audience"
+msgstr "독자"
+
+#: stylesheets/l10n.xml.in.h:20
+msgid "Author"
+msgstr "저자"
+
+#: stylesheets/l10n.xml.in.h:21
+msgid "Bigliography"
+msgstr "참고 목록"
+
+#: stylesheets/l10n.xml.in.h:22
+msgid "Book"
+msgstr "책"
+
+#: stylesheets/l10n.xml.in.h:23
+msgid "Caution"
+msgstr "주의"
+
+#: stylesheets/l10n.xml.in.h:24
+msgid "Chapter"
+msgstr "장"
+
+#: stylesheets/l10n.xml.in.h:25
+msgid "Collaborator"
+msgstr "공동 저자"
+
+#: stylesheets/l10n.xml.in.h:26
+msgid "Colophon"
+msgstr "판권"
+
+#: stylesheets/l10n.xml.in.h:28
+msgid "Copyright"
+msgstr "저작권"
+
+#: stylesheets/l10n.xml.in.h:29
+msgid "Date"
+msgstr "날짜"
+
+#: stylesheets/l10n.xml.in.h:30
+msgid "Dedication"
+msgstr "바치는 글"
+
+#: stylesheets/l10n.xml.in.h:31
+msgid "Editor"
+msgstr "편집"
+
+#: stylesheets/l10n.xml.in.h:32
+msgid "Email"
+msgstr "전자메일"
+
+#: stylesheets/l10n.xml.in.h:33
+msgid "Example"
+msgstr "예제"
+
+#: stylesheets/l10n.xml.in.h:34
+msgid "Figure"
+msgstr "그림"
+
+#: stylesheets/l10n.xml.in.h:35
+msgid "Glossary"
+msgstr "용어해설"
+
+#: stylesheets/l10n.xml.in.h:36
+msgid "Important"
+msgstr "중요"
+
+#: stylesheets/l10n.xml.in.h:37
+msgid "Index"
+msgstr "찾아보기"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Legal Notice"
+msgstr "법적 고지"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Level"
+msgstr "중요도"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Message Audience"
+msgstr "받는 이"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Message Level"
+msgstr "중요도"
+
+#: stylesheets/l10n.xml.in.h:42
+msgid "Message Origin"
+msgstr "보내는 이"
+
+#: stylesheets/l10n.xml.in.h:43
+msgid "Note"
+msgstr "참고"
+
+#: stylesheets/l10n.xml.in.h:44
+msgid "Origin"
+msgstr "보냄"
+
+#: stylesheets/l10n.xml.in.h:45
+msgid "Other Contributor"
+msgstr "그 외 도와주신 분"
+
+#: stylesheets/l10n.xml.in.h:46
+msgid "Part"
+msgstr "부"
+
+#: stylesheets/l10n.xml.in.h:47
+msgid "Preface"
+msgstr "서문"
+
+#: stylesheets/l10n.xml.in.h:48
+msgid "Publisher"
+msgstr "펴냄"
+
+#: stylesheets/l10n.xml.in.h:49
+msgid "Reference"
+msgstr "참고문헌"
+
+#: stylesheets/l10n.xml.in.h:50
+msgid "Reference Entry"
+msgstr "참고문헌 항목"
+
+#: stylesheets/l10n.xml.in.h:51
+msgid "Reference Section"
+msgstr "참고문헌 절"
+
+#: stylesheets/l10n.xml.in.h:52
+msgid "Revision History"
+msgstr "개정판 내역"
+
+#: stylesheets/l10n.xml.in.h:54
+msgid "See"
+msgstr "살펴볼 내용"
+
+#: stylesheets/l10n.xml.in.h:55
+msgid "See Also"
+msgstr "살펴볼 다른 내용"
+
+#: stylesheets/l10n.xml.in.h:56
+msgid "Set Index"
+msgstr "전집 찾아보기"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Table"
+msgstr "표"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Table of Contents"
+msgstr "차례"
+
+#: stylesheets/l10n.xml.in.h:59
+msgid "Tip"
+msgstr "설명"
+
+#: stylesheets/l10n.xml.in.h:60
+msgid "Title"
+msgstr "제목"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "Warning"
+msgstr "경고"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -415,55 +609,3 @@ msgstr "그놈에서 도움말을 봅니다"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "도움말"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>문서에서 글자 찾기:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "자동 줄 넘김(_W)"
-
-#~ msgid "Find text..."
-#~ msgstr "글자 찾기..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "모든 단어 일치(_E)"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "대/소문자 일치(_M)"
-
-#~ msgid "_Search for:"
-#~ msgstr "찾기(_S):"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "그놈 - 바탕화면"
-
-#~ msgid "Additional documents"
-#~ msgstr "추가 문서"
-
-#~ msgid "Manual Pages"
-#~ msgstr "설명서 페이지"
-
-#~ msgid "Info Pages"
-#~ msgstr "정보 페이지"
-
-#~ msgid "Manual pages"
-#~ msgstr "설명서 페이지"
-
-#~ msgid "GNOME is"
-#~ msgstr "그놈은 "
-
-#~ msgid "Free Software"
-#~ msgstr "자유 소프트웨어"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "읽고 있습니다..."
-
-#~ msgid "Index"
-#~ msgstr "색인"
-
-#~ msgid "Search in the index"
-#~ msgstr "색인에서 찾습니다"
