--- a/po/sq.po
+++ b/po/sq.po
@@ -1,115 +1,103 @@
 # Albanian translation of yelp.
-# Copyright (C) 2002,2003 Free Software Foundation, Inc.
-# Laurent Dhima <laurenti@alblinux.net>, 2002,2003.
+# Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
+# Laurent Dhima <laurenti@alblinux.net>, 2002,2003, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-07-01 00:57+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-15 22:43+0100\n"
+"PO-Revision-Date: 2004-01-15 23:11+0100\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.3\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplikacione"
+msgstr "Instrumente"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "Desktopi"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Zhvillim"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Zhvillim"
+msgstr "Ambiente zhvillimi"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Zhvillim"
+msgstr "Vegla për zhvillim"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Editors"
-msgstr "/_Ndrysho"
+msgstr "Editues"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë edukues"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Lojra dhe argëtime"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "E përgjithshme"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Përmbajtja e Ndihmës"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë në lidhje me internetin"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Routin e Kernel"
+msgstr "Kernels"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë multimedialë"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Aplikativë për zyrë dhe prodhimtari"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë shkencorë"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Siguria"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Thirrje të sistemit"
+msgstr "Sistemi"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Vegla"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplikacione"
+msgstr "Aplikativë X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,19 +105,19 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Gërma të mëdh_a/të vogla"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Gjej"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Gjej: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "_Tjetra"
+msgstr "_Pasardhësi"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
@@ -137,7 +125,7 @@ msgstr "_Paraardhësja"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Rifillo nga fillimi"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -147,50 +135,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:424 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Asnjë atribut href u gjet në yelp:dokument"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:439 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Jashtë memorjes"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:616 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Titulli i faqes"
 
 #: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
-#, fuzzy
+#: src/yelp-man-pager.c:372
 msgid "Contents"
-msgstr "Përmbajtja e Ndihmës"
+msgstr "Përmbajtja"
 
 #: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "I/e panjohur"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Dokumenti '%s' nuk ekziston"
+msgstr "Dokumenti i zgjedhur nuk do të hapet"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Dokumenti '%s' nuk ekziston"
+msgstr "Faqja e zgjedhur nuk gjendet në këtë dokument."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Dokumenti '%s' nuk ekziston"
+msgstr "Tabela e përmbajtjes nuk mund të lexohet."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Dokumentet DocBook SGML nuk suportohen më."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Dokumenti '%s' nuk ekziston"
+msgstr "File i zgjedhur nuk mund të lexohet."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -267,17 +252,16 @@ msgid "System Administration"
 msgstr "Administrimi i sistemit"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Dokumente"
+msgstr "URI i dokumentit"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI i dokumentit që duhet procesuar"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Numërimi i pauzës është negativ."
 
 #: src/yelp-toc-pager.c:880
 msgid "Categories"
@@ -304,19 +288,16 @@ msgid "/_Edit"
 msgstr "/_Ndrysho"
 
 #: src/yelp-window.c:238
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Ndrysho/_Kërko në faqe..."
+msgstr "/Ndrysho/_Kërko..."
 
 #: src/yelp-window.c:241
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Ndrysho/_Kërko përsëri"
+msgstr "/Ndrysho/_Gjej në vazhdim"
 
 #: src/yelp-window.c:244
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Ndrysho/_Kërko përsëri"
+msgstr "/Ndrysho/Gjej pa_raardhësin"
 
 #: src/yelp-window.c:248
 msgid "/_Go"
@@ -335,24 +316,20 @@ msgid "/Go/_Home"
 msgstr "/Shko/_Home"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Shko"
+msgstr "/Shko/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Paraardhësja"
+msgstr "/Shko/Faqja _Paraardhëse"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Shko/_Indeks"
+msgstr "/Shko/Faqja në _Vazhdim"
 
 #: src/yelp-window.c:265
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Përmbajtja e Ndihmës"
+msgstr "/shko/_Përmbajtja"
 
 #: src/yelp-window.c:269
 msgid "/_Help"
@@ -360,7 +337,7 @@ msgstr "/_Ndihmë"
 
 #: src/yelp-window.c:270
 msgid "/Help/_About"
-msgstr "/Ndihmë/_Në lidhje me"
+msgstr "/Ndihmë/_Informacione"
 
 #: src/yelp-window.c:332
 msgid "Help Browser"
@@ -372,7 +349,7 @@ msgstr "Seksioni"
 
 #: src/yelp-window.c:603
 msgid "Back"
-msgstr "Kthehu"
+msgstr "Mbrapa"
 
 #: src/yelp-window.c:604
 msgid "Show previous page in history"
@@ -410,146 +387,144 @@ msgstr "Një Udhëzues i Shfletueshëm për GNOME "
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Informacione në lidhje me këtë Bibliografi"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Book"
-msgstr ""
+msgstr "Informacione në lidhje me këtë libër"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Chapter"
-msgstr ""
+msgstr "Informacione në lidhje me këtë kapitull"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Entry"
-msgstr ""
+msgstr "Informacione në lidhje me këtë zë"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Glossary"
-msgstr ""
+msgstr "Informacione në lidhje me këtë përmbledhje"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Index"
-msgstr ""
+msgstr "Informacione në lidhje me këtë tregues"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Part"
-msgstr ""
+msgstr "Informacione në lidhje me këtë pjesë"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Preface"
-msgstr ""
+msgstr "Informacione në lidhje me këtë hyrje"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Reference"
-msgstr ""
+msgstr "Informacione në lidhje me këtë referim"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Section"
-msgstr ""
+msgstr "Informacione në lidhje me këtë seksion"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Set"
-msgstr ""
+msgstr "Informacione në lidhje me këtë sqarim"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplikacione"
+msgstr "Afilim"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Appendix"
-msgstr ""
+msgstr "Shtesë"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Article"
-msgstr ""
+msgstr "Artikull"
 
 #: stylesheets/l10n.xml.in.h:19
+#: Verifikoje
 msgid "Audience"
-msgstr ""
+msgstr "Dëgjim"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Author"
-msgstr ""
+msgstr "Autori"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografia"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Book"
-msgstr ""
+msgstr "Libri"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Caution"
-msgstr ""
+msgstr "Kujdes"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Chapter"
-msgstr ""
+msgstr "Kapitull"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Collaborator"
-msgstr ""
+msgstr "Bashkpunëtori"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Colophon"
-msgstr ""
+msgstr "Përshkimi final"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
 #: stylesheets/l10n.xml.in.h:30
-#, fuzzy
 msgid "Dedication"
-msgstr "Seksioni"
+msgstr "Dedikimi"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
 msgid "Editor"
-msgstr "/_Ndrysho"
+msgstr "Editori"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Example"
-msgstr ""
+msgstr "Shembull"
 
 #: stylesheets/l10n.xml.in.h:34
 msgid "Figure"
-msgstr ""
+msgstr "Figura"
 
 #: stylesheets/l10n.xml.in.h:35
 msgid "Glossary"
-msgstr ""
+msgstr "Glossary"
 
 #: stylesheets/l10n.xml.in.h:36
 msgid "Important"
-msgstr ""
+msgstr "I rëndësishëm"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Index"
@@ -557,71 +532,71 @@ msgstr "Treguesi"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Legal Notice"
-msgstr ""
+msgstr "Njoftimi ligjor"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Level"
-msgstr ""
+msgstr "Etiketa"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Message Audience"
-msgstr ""
+msgstr "Dëgjim mesazhi"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Message Level"
-msgstr ""
+msgstr "Etiketa mesazhit"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Message Origin"
-msgstr ""
+msgstr "Origjina e mesazhit"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Note"
-msgstr ""
+msgstr "Shënim"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Origin"
-msgstr ""
+msgstr "Origjina"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Other Contributor"
-msgstr ""
+msgstr "Kontribues të tjerë"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Part"
-msgstr ""
+msgstr "Pjesa"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Preface"
-msgstr ""
+msgstr "Hyrja"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Publisher"
-msgstr ""
+msgstr "Publikues"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Reference"
-msgstr ""
+msgstr "Riferime"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Reference Entry"
-msgstr ""
+msgstr "Element riferues"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Reference Section"
-msgstr ""
+msgstr "Seksioni riferimeve"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Revision History"
-msgstr ""
+msgstr "Historiku revizionit"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "See"
-msgstr ""
+msgstr "Shiko"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "See Also"
-msgstr ""
+msgstr "Shiko gjithashtu"
 
 #: stylesheets/l10n.xml.in.h:56
 #, fuzzy
@@ -630,24 +605,23 @@ msgstr "Treguesi"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Table"
-msgstr ""
+msgstr "Tabela"
 
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Përmbajtja e Ndihmës"
+msgstr "Tabela e përmbajtjes"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Tip"
-msgstr ""
+msgstr "Tip"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Title"
-msgstr ""
+msgstr "Titulli"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "Warning"
-msgstr ""
+msgstr "Kujdes"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -657,54 +631,3 @@ msgstr "Merr ndihmë me GNOME"
 msgid "Help"
 msgstr "Ndihmë"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokumenti '%s' nuk ekziston"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Gjej tekstin në dokument:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Automatically _wrap around"
-
-#~ msgid "Find text..."
-#~ msgstr "Gjej tekstin..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Gjej fjalën e _plotë"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Match upper/lower case"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Kërko për:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Desktop"
-
-#~ msgid "Additional documents"
-#~ msgstr "Dokumente të tjera"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Faqe të udhëzuesit"
-
-#~ msgid "Info Pages"
-#~ msgstr "Faqe Informative"
-
-#~ msgid "Manual pages"
-#~ msgstr "Faqe të udhëzuesit"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME është"
-
-#~ msgid "Free Software"
-#~ msgstr "Software i Lirë"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Duke ngarkuar..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Kërko tek treguesi"
